doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/private/var/folders/_r/_ctt_5fj0jd1b0r440n3l55r0000gp/T/AppTranslocation/F0F96481-B9D0-473E-B201-D8578E7B742A/d/BlueJ.app/Contents/JDK/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
/private/var/folders/_r/_ctt_5fj0jd1b0r440n3l55r0000gp/T/AppTranslocation/F0F96481-B9D0-473E-B201-D8578E7B742A/d/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/private/var/folders/_r/_ctt_5fj0jd1b0r440n3l55r0000gp/T/AppTranslocation/F0F96481-B9D0-473E-B201-D8578E7B742A/d/BlueJ.app/Contents/Resources/Java/junit-4.11.jar:/private/var/folders/_r/_ctt_5fj0jd1b0r440n3l55r0000gp/T/AppTranslocation/F0F96481-B9D0-473E-B201-D8578E7B742A/d/BlueJ.app/Contents/Resources/Java/hamcrest-core-1.3.jar:/private/var/folders/_r/_ctt_5fj0jd1b0r440n3l55r0000gp/T/AppTranslocation/F0F96481-B9D0-473E-B201-D8578E7B742A/d/BlueJ.app/Contents/Resources/Java/lang-stride.jar:/private/var/folders/_r/_ctt_5fj0jd1b0r440n3l55r0000gp/T/AppTranslocation/F0F96481-B9D0-473E-B201-D8578E7B742A/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.base.jar:/private/var/folders/_r/_ctt_5fj0jd1b0r440n3l55r0000gp/T/AppTranslocation/F0F96481-B9D0-473E-B201-D8578E7B742A/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.controls.jar:/private/var/folders/_r/_ctt_5fj0jd1b0r440n3l55r0000gp/T/AppTranslocation/F0F96481-B9D0-473E-B201-D8578E7B742A/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.fxml.jar:/private/var/folders/_r/_ctt_5fj0jd1b0r440n3l55r0000gp/T/AppTranslocation/F0F96481-B9D0-473E-B201-D8578E7B742A/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.graphics.jar:/private/var/folders/_r/_ctt_5fj0jd1b0r440n3l55r0000gp/T/AppTranslocation/F0F96481-B9D0-473E-B201-D8578E7B742A/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.media.jar:/private/var/folders/_r/_ctt_5fj0jd1b0r440n3l55r0000gp/T/AppTranslocation/F0F96481-B9D0-473E-B201-D8578E7B742A/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.properties.jar:/private/var/folders/_r/_ctt_5fj0jd1b0r440n3l55r0000gp/T/AppTranslocation/F0F96481-B9D0-473E-B201-D8578E7B742A/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.swing.jar:/private/var/folders/_r/_ctt_5fj0jd1b0r440n3l55r0000gp/T/AppTranslocation/F0F96481-B9D0-473E-B201-D8578E7B742A/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.web.jar:/Users/zkane/Projects/BlueJ.NaiveTicket
-d
/Users/zkane/Projects/BlueJ.NaiveTicket/doc
-encoding
UTF-8
-charset
UTF-8
/Users/zkane/Projects/BlueJ.NaiveTicket/TicketMachine.java
<---- end of javadoc command ---->
Loading source file /Users/zkane/Projects/BlueJ.NaiveTicket/TicketMachine.java...
/Users/zkane/Projects/BlueJ.NaiveTicket/TicketMachine.java:12: error: <identifier> expected
class public TicketMachine
     ^
/Users/zkane/Projects/BlueJ.NaiveTicket/TicketMachine.java:12: error: <identifier> expected
class public TicketMachine
                          ^
/Users/zkane/Projects/BlueJ.NaiveTicket/TicketMachine.java:15: error: illegal start of expression
    private Integer price;
    ^
/Users/zkane/Projects/BlueJ.NaiveTicket/TicketMachine.java:30: error: invalid method declaration; return type required
    public TicketMachine(Integer ticketCost)
           ^
4 errors
